<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/purple_500"
        android:text="@string/btn_name">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_left_parent"
        android:background="@color/teal_200"
        android:textSize="17sp"

        >

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_right_right"
        android:background="@color/teal_200"
        android:textSize="17sp"
        android:layout_alignParentEnd="true"

        >

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_right_parent"
        android:background="@color/teal_200"
        android:textSize="17sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        >

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_left_parent"
        android:background="@color/teal_200"
        android:textSize="17sp"
        android:layout_alignParentBottom="true"

        >

    </TextView>

    <TextView
        android:layout_width="15dp"
        android:layout_height="75dp"
        android:layout_above="@+id/btn_center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@color/black"
        android:id="@+id/black_text">


    </TextView>

    <TextView
        android:layout_width="75dp"
        android:layout_height="15dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/green_text"
        android:background="@color/green">


    </TextView>

    <TextView
        android:layout_width="75dp"
        android:layout_height="15dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="15dp"
        android:background="@color/red"
        android:id="@+id/red_text">


    </TextView>

    <TextView
        android:layout_width="15dp"
        android:layout_height="75dp"
        android:layout_below="@+id/btn_center"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/yellow"
        android:id="@+id/yellow_text">


    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_left"
        android:background="@color/purple_200"
        android:layout_alignStart="@+id/green_text"
        android:layout_alignTop="@+id/black_text"
        >

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_right"
        android:background="@color/purple_200"
        android:layout_alignEnd="@+id/red_text"
        android:layout_alignTop="@+id/black_text"
        >

    </TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_left"
        android:background="@color/purple_200"
        android:layout_alignStart="@+id/green_text"
        android:layout_alignBottom="@+id/yellow_text"
        >

    </TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_right"
        android:background="@color/purple_200"
        android:layout_alignEnd="@+id/red_text"
        android:layout_alignBottom="@+id/yellow_text"
        >

    </TextView>




</RelativeLayout>